--- a/NLW/styles/create-point.css
+++ b/NLW/styles/create-point.css
@@ -73,13 +73,14 @@ form select {
     padding: 10px 24px;
     font-size: 15px;
     border: 0;
-    border-radius: 8px;
+	border-radius: 8px;
 }
 
 form select {
     -webkit-appearance: none;
     -moz-appearance: none;
-    appearance: none;
+	appearance: none;
+	cursor: pointer;
 }
 
 form label {
@@ -98,9 +99,49 @@ form button {
     font-size: 16px;
     border: 0;
     margin-top: 40px;
-    transition: background-color 400ms;
+	transition: background-color 400ms;
+	cursor: pointer;
 }
 
 form button:hover {
     background-color: #1d9655;
+}
+
+.items-grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr; /* tres colunas de 1fr (frações) */
+	gap: 16px;
+}
+
+.items-grid li {
+	background-color: #f5f5f5;
+	list-style: none;
+	border: 2px solid #f5f5f5;
+	border-radius: 8px;
+	height: 180px;
+	padding: 32px 24px 16px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-between;
+	text-align: center;
+	cursor: pointer;
+}
+
+.items-grid li span {
+	margin-top: 12px;
+	flex: 1;
+	display: flex;
+	align-items: center;
+	color: var(--title-color);
+}
+
+.items-grid li.selected {
+	background: #e1faec;
+	border: 2px solid #34cb79;
+}
+
+.items-grid li img,
+.items-grid li span {
+	pointer-events: none;
 }
